<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context="icelab.pong.Highscore">

    <TextView
        android:text="@string/highscore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="50sp"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/name"
        android:text="@string/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="50sp"
        android:layout_marginTop="102dp"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/score"
        android:text="@string/score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="50sp"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/name"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/button_again"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/again"
        android:textSize="50sp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />
    <Button
        android:id="@+id/button_sms"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sms"
        android:textSize="20sp"
        android:layout_above="@+id/button_share"
        android:layout_alignRight="@+id/button_again"
        android:layout_alignEnd="@+id/button_again"
    />
    <Button
        android:id="@+id/button_share"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/share"
        android:textSize="30sp"
        android:layout_above="@+id/button_again"
        android:layout_marginBottom="10dp"
        android:layout_alignRight="@+id/button_again"
        android:layout_alignEnd="@+id/button_again" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:ems="10"
        android:id="@+id/phone"
        android:layout_alignBottom="@+id/button_sms"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_toLeftOf="@+id/button_sms"
        android:layout_toStartOf="@+id/button_sms" />

</RelativeLayout>
